html add(navbar icon) for rwd hamburger, css add rwd 992px for navbar, js add navbar

--- a/detail.html
+++ b/detail.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEWS DETAIL</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="./style/all.css">
     <link rel="stylesheet" href="./style/detail.css">
@@ -72,44 +72,52 @@
                     </a>
                 </div>
                 <h1>FRASH BURGER</h1>
-                <ul class="nav_list">
-                    <li class="nav_item">
-                        <a href="./index.html">
-                            HOME
-                        </a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="./menu.html">
-                            MENU
-                        </a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="./news.html">
-                            NEWS
-                        </a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="./about.html">
-                            ABOUT
-                        </a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="./faq.html">
-                            FAQ
-                        </a>
-                    </li>
-                    <li class="nav_item" id="MemberBtn">
-                        <a href="#">
-                            <i class="fas fa-user"></i>
-                        </a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="#More">
-                            <i class="fas fa-heart"></i>
-                            <span class="nav_count" id="NavCount"></span>
-                        </a>
-                    </li>
-                </ul>
+                <div class="nav_body" id="NavBody">
+                    <ul class="nav_list">
+                        <li class="nav_item">
+                            <a href="./index.html">
+                                HOME
+                            </a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="./menu.html">
+                                MENU
+                            </a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="./news.html">
+                                NEWS
+                            </a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="./about.html">
+                                ABOUT
+                            </a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="./faq.html">
+                                FAQ
+                            </a>
+                        </li>
+                        <li class="nav_item" id="MemberBtn">
+                            <a href="#">
+                                <i class="fas fa-user"></i>
+                            </a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#More">
+                                <i class="fas fa-heart"></i>
+                                <span class="nav_count" id="NavCount"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <a href="#" class="nav_btn" id="NavBtn">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
+                <a href="#" class="nav_btn nav_close js-none" id="NavClose">
+                    <i class="fa-solid fa-xmark"></i>
+                </a>
             </div>
         </nav>
     </header>
