add rwd for(ig, footer)

--- a/news.html
+++ b/news.html
@@ -314,26 +314,44 @@
                     <img class="logo_w" src="./img/logo-l.png" width="50" height="50" alt="logo-l_img">
                 </a>
             </div>
-            <ul class="footer_list">
-                <li class="footer_item">
-                    follow us
-                </li>
-                <li class="footer_item">
-                    <a href="#">
-                        <i class="fab fa-facebook-square"></i>
-                    </a>
-                </li>
-                <li class="footer_item">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                </li>
-                <li class="footer_item">
-                    <a href="#">
-                        <i class="fab fa-line"></i>
-                    </a>
-                </li>
-            </ul>
+            <div class="footer_body">
+                <ul class="footer_list">
+                    <li class="footer_item">
+                        <a href="./about.html">about us</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="./faq.html">contact us</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="./faq.html">join us</a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">privacy policy</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer_foot">
+                <ul class="footer_list">
+                    <li class="footer_item">
+                        follow us
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="footer_item">
+                        <a href="#">
+                            <i class="fab fa-line"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 
