add rwd for carousel

--- a/faq.html
+++ b/faq.html
@@ -155,7 +155,7 @@
                     <div class="l-flip">
                         <p class="faq_num">02</p>
                         <h5 class="faq_q">
-                            Why are the raw vegetables and tomato so fresh in the FRESH BURGER?
+                            Why are the raw vegetables so fresh in the FRESH BURGER?
                         </h5>
                     </div>
                     <p class="faq_a js-none" id="FaqA-2">
@@ -189,7 +189,7 @@
                     <div class="l-flip">
                         <p class="faq_num">04</p>
                         <h5 class="faq_q">
-                            Why are the raw vegetables and tomato so fresh in the FRESH BURGER?
+                            Why are the raw vegetables so fresh in the FRESH BURGER?
                         </h5>
                     </div>
                     <p class="faq_a js-none" id="FaqA-4">
