--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <section class="base base-carousel">
         <div class="container">
-            <ul class="carousel_list" id="CaroList" style="left: 0;">
+            <ul class="carousel_list" id="CaroList">
                 <li class="carousel_item">
                     <img src="./img/carousel-1.jpg" width="1200" height="500" alt="carousel_img">
                 </li>
