modify faq-qa (js css)

--- a/faq.html
+++ b/faq.html
@@ -141,7 +141,7 @@
                             Why do FRESH BURGER insist on making their own buns?
                         </h5>
                     </div>
-                    <p class="faq_a js-none" id="FaqA-1">
+                    <p class="faq_a" id="FaqA-1">
                         In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
                         tool. However, unqualified buns often use many additives to save speed and cost, or are light
                         and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
@@ -158,7 +158,7 @@
                             Why are the raw vegetables so fresh in the FRESH BURGER?
                         </h5>
                     </div>
-                    <p class="faq_a js-none" id="FaqA-2">
+                    <p class="faq_a" id="FaqA-2">
                         In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
                         tool. However, unqualified buns often use many additives to save speed and cost, or are light
                         and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
@@ -175,7 +175,7 @@
                             What is the "No Combo Meat Guarantee" for FRESH BURGER?
                         </h5>
                     </div>
-                    <p class="faq_a js-none" id="FaqA-3">
+                    <p class="faq_a" id="FaqA-3">
                         In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
                         tool. However, unqualified buns often use many additives to save speed and cost, or are light
                         and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
@@ -192,7 +192,7 @@
                             Why are the raw vegetables so fresh in the FRESH BURGER?
                         </h5>
                     </div>
-                    <p class="faq_a js-none" id="FaqA-4">
+                    <p class="faq_a" id="FaqA-4">
                         In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
                         tool. However, unqualified buns often use many additives to save speed and cost, or are light
                         and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
@@ -209,7 +209,7 @@
                             What is the "No Combo Meat Guarantee" for FRESH BURGER?
                         </h5>
                     </div>
-                    <p class="faq_a js-none" id="FaqA-5">
+                    <p class="faq_a" id="FaqA-5">
                         In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
                         tool. However, unqualified buns often use many additives to save speed and cost, or are light
                         and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
