modify carousel (js, css)

--- a/faq.html
+++ b/faq.html
@@ -226,21 +226,11 @@
         <div class="container">
             <h3>CONTACT INFO.</h3>
             <form class="info">
-                <div class="info_head js-slide js-slide-l">
-                    <label>NAME
-                        <input type="text">
-                    </label>
-                    <label>EMAIL
-                        <input type="email">
-                    </label>
-                    <label>TEL
-                        <input type="tel">
-                    </label>
-                </div>
-                <div class="info_body js-slide js-slide-r">
-                    <textarea placeholder="MESSAGE..."></textarea>
-                </div>
-                <button class="btn btn-ok" type="button">OK</button>
+                <input class="js-slide js-slide-b" type="text" placeholder="NAME">
+                <input class="js-slide js-slide-b" type="email" placeholder="EMAIL">
+                <input class="js-slide js-slide-b" type="tel" placeholder="TEL">
+                <textarea class="js-slide js-slide-b" placeholder="MESSAGE..."></textarea>
+                <button class="btn btn-ok js-slide js-slide-b" type="button">SEND</button>
             </form>
         </div>
     </section>
