--- a/detail.html
+++ b/detail.html
@@ -112,10 +112,10 @@
                         </li>
                     </ul>
                 </div>
-                <a href="#" class="nav_btn" id="NavBtn">
+                <a href="javascript:;" class="nav_btn" id="NavBtn">
                     <i class="fa-solid fa-bars"></i>
                 </a>
-                <a href="#" class="nav_btn nav_close js-none" id="NavClose">
+                <a href="javascript:;" class="nav_btn nav_close js-none" id="NavClose">
                     <i class="fa-solid fa-xmark"></i>
                 </a>
             </div>
