add instagram title, remove more css

--- a/layout.html
+++ b/layout.html
@@ -166,6 +166,7 @@
     </section>
 
     <section class="insta container">
+        <h3>INSTAGRAM</h3>
         <ul class="insta_list">
             <li class="insta_item">
                 <a href="#">
