--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
     </section>
 
     <section class="insta container">
+        <h3>INSTAGRAM</h3>
         <ul class="insta_list">
             <li class="insta_item">
                 <a href="#">
