--- a/menu.html
+++ b/menu.html
@@ -269,6 +269,7 @@
     </section>
 
     <section class="insta container">
+        <h3>INSTAGRAM</h3>
         <ul class="insta_list">
             <li class="insta_item">
                 <a href="#">
