增加選單彈窗點擊遮罩關閉

--- a/layout.html
+++ b/layout.html
@@ -84,7 +84,7 @@
                 </div>
                 <h1>FRASH BURGER</h1>
                 <div class="nav_body" id="NavBody">
-                    <ul class="nav_list">
+                    <ul class="nav_list" id="NavList">
                         <li class="nav_item">
                             <a href="./index.html">
                                 HOME
