--- a/ntust.html
+++ b/ntust.html
@@ -45,14 +45,14 @@
           <label class="divided_lable" for="boxAmount">本</label>
           <input class="divided_input" type="text" id="boxRound" />
           <label class="divided_lable" for="boxRound">回</label>
-          <input class="divided_input" type="text" id="boxAmounts" />
+          <input class="divided_input" type="text" id="boxAmounts" readonly style="background-color:#999 ;" />
           <label class="divided_lable" for="boxAmounts">本</label>
-          <input class="divided_input" type="text" id="boxPack" />
+          <input class="divided_input" type="text" id="boxPack" readonly style="background-color:#999 ;"/>
           <label class="divided_lable" for="boxPack">包</label>
         </li>
         <li class="count_item">
           <label for="boxCount">小計</label>
-          <input type="text" id="boxCount" />
+          <input type="text" id="boxCount" readonly style="background-color:#999 ;"/>
         </li>
         <li class="count_item">
           <label for="boxCounts">合計</label>
